# lan-statistics

./: .gitignore  Dockerfile  README.md  _Cargo.toml  dashboard.json  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  prometheus.yml  vite.config.ts
.github/workflows/: main.yml
common/: Cargo.toml
common/src/: game.rs  lib.rs  response.rs
common/src/response/: games.rs  now_playing.rs
src/: App.tsx  interfaces.ts  main.tsx
src-server/: Cargo.toml  games.json
src-server/src/: api.rs  config.rs  lib.rs  main.rs  metrics.rs  repo.rs
src-server/src/api/: games.rs  now_playing.rs
src-server/src/repo/: games.rs  now_playing.rs
src-tauri/: .gitignore  .taurignore  Cargo.toml  games.json  log4rs.yml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  app.rs  config.rs  main.rs  metrics.rs  processes.rs
src-tauri/src/module_bindings/: client_connected_reducer.rs  game_table.rs  game_type.rs  mod.rs  set_games_reducer.rs  set_userinfo_reducer.rs  user_info_type.rs  user_table.rs  user_type.rs
src/components/: DataCollectionInfo.tsx  GameCard.tsx  GameList.tsx  Overview.tsx  Settings.tsx
src/pages/overview/: Overview.tsx
src/pages/processes/: Processes.tsx
src/pages/settings/: Settings.tsx
