[package]
name = "lan-manager"
version = "0.3.1"
edition = "2024"

[dependencies]
common = { path = "../common" }
actix-web = { version = "4.11.0", default-features = false, features = ["macros"] }
chrono = "0.4.41"
serde = "1.0.219"
tokio = "1.47.1"
serde_json = "1.0.145"
actix-files = "0.6.8"
actix-web-httpauth = "0.8.2"
sha2 = "0.10.9"
clokwerk = "0.4.0"
prometheus = "0.14.0"
regex = "1.12.2"