[package]
name = "lan-tracker"
version = "0.1.0"
description = "LAN Datensammler"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clokwerk = "0.4.0"
config-file = "0.2.3"
reqwest = "0.12.15"
windows-service = "0.8.0"
tokio = { version = "1.44.2", features = ["macros"] }
elevated-command = "1.1.2"
toml = "0.8.20"
lazy_static = "1.5.0"
sha2 = "0.10.8"

[dependencies.sysinfo]
version = "0.34.2"

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]

[dependencies.prometheus]
version = "0.14.0"
features = ["push"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

