[package]
name = "lan-manager"
version = "0.3.0"
description = "LAN Manager"
authors = ["Gewuerznud3l"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
common = { path = "../common" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clokwerk = "0.4.0"
windows-service = "0.8.0"
tokio = { version = "1.44.2", features = ["macros"] }
toml = "0.8.20"
lazy_static = "1.5.0"
sha2 = "0.10.8"
config = "0.15.11"
named-lock = "0.4.1"
log4rs = "1.3.0"
log = "0.4.27"
sysinfo= "0.34.2"
chrono = "0.4.41"
spacetimedb-sdk = "1.0"
hex = "0.4"
reqwest = { version = "0.12.23", features = ["json"] }
notify-rust = "4.11.7"
regex = "1.12.2"

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]

[dependencies.prometheus]
version = "0.14.0"
features = ["push"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

